[package]
name = "crabst"
version = "0.2.1-alpha.0"
edition = "2021"
authors = ["orhanbalci@gmail.com <orhanbalci@gmail.com>"]
description = "crate download statistics on your cli"
repository = "https://github.com/orhanbalci/crabst.git"
homepage = "https://github.com/crabst"
keywords = ["crates","stats"]
license = "MIT"
readme = "README.md"
categories = ["cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crates_io_api = "0.8.0"
getopts = "0.2"
rasciigraph = "0.1.1"
comfy-table = "5.0"
itertools = "0.10"
chrono = "0.4"
indicatif = "0.17"
